assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');




* {
 margin: 0;
 padding: 0;
 border: none;
 font-family: sans-serif;
}

/* Background image for site */
html { 
    background: url("../images/background-image.webp") no-repeat center center fixed; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
  }

/* header styling and image styling */
#logo-text {
    width: 500px;
    height: 150px;
    margin: 50px;
    display: flex;
    justify-content: center;
    margin: auto;
    flex-direction: row;
  }
.logo-text {
    width: 166px;
    height: 50px;
    margin: auto;
    text-align: center;
    font-size: 20px;
    font-weight: 600;
}

.logo-text-center {
    width: 166px;
    height: 50px;
    text-align: center;
}

 /* button styling */ 
 .start-next-btn:hover {
    color:  #172b49;
    background-color: #f2d607;
    outline: solid 2px #172b49;
    transition: 0.3s;
 }

 .restart-quiz-btn:hover {
    color:  #172b49;
    background-color: #f2d607;
    outline: solid 2px #172b49;
    transition: 0.3s;
 }

/* Game area styling */
#quiz-area {
    width: 500px;
    height: 600px;
    margin: 50px;
    display: flex;
    margin-top: 10px;
    margin: auto; 
    flex-direction: column;
    padding-top: 10px;
    border-radius: 30px;
    background-color: #172b49;
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
    display: none;
}

#questions-div {
    display: flex;
    margin-left: auto;
    margin-right: auto;
    width: 80%;
    height: 100px;
    justify-content: center;
    color: white;
    font-size: 25px;
    text-align: center;
    padding-top: 30px;
    padding-bottom: 12px;
}

#timer {
    display: flex;
    margin: 10px auto;
    width: 30%;
    height: 25px;
    justify-content: center;
    color: #172b49;
    background-color: #f2d607;
    border-radius: 15px;
    padding-top: 10px;
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
    font-weight: bold;
}

#answer-btn-area {
    display: flex;
    flex-direction: column;
    padding-bottom: 50px;
}

.answer-button {
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
    width: 280px;
    height: 40px;
    margin: 10px auto;
    border-radius: 15px;
    cursor: pointer;
    background-color: white;
}

.answer-btn {
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
    width: 280px;
    height: 40px;
    margin: 10px auto;
    border-radius: 15px;
    cursor: pointer;
    background-color: white;
}

.answer-btn:hover {
    border: 3px solid #f2d607;
}

.answer-btn span {
    font-size: 18px;
    pointer-events: none;
}

.correct {
    background-color: green;
}

.incorrect {
    background-color: red;
}

.disabled {
    pointer-events: none;
}


#next-question {
    width: 180px;
    height: 50px;
    margin: auto;
    border-radius: 15px;
    cursor: pointer;
    font-size: 20px;
    display: block;
}

/* score area and question counter */
#q-left-answer-correct {
    display: flex;
    flex-direction: row;
}

#questions-left {
    width: 120px;
    height: 50px;
    margin-left: 40px;
    color: white;
    font-size: 20px;
    padding-top: 20px;
    text-align: center;
}

#questions-left-counter {
    width: 5%;
    height: 50px;
    color: #f2d607;
    font-size: 20px;
    padding-left: 4px;
    padding-top: 20px;
}

#questions-left-p {
    width: 12%;
    height: 50px;
    color: #f2d607;
    font-size: 20px;
    padding-top: 20px;
}

#correct-answers {
    width: 100px;
    height: 50px;
    margin-left: 70px;
    color: white;
    font-size: 20px;
    padding-top: 20px;
    text-align: center;
}

#correct-answers-counter {
    width: 10%;
    height: 50px;
    color: #f2d607;
    font-size: 20px;
    padding-top: 20px;
}

/* Welcome and rules styling */

h3 {
    text-align: center;
    color: white;
    font-size: 22px;
}

#welcome-rules-area {
    width: 500px;
    height: 600px;
    margin: 50px;
    display: flex;
    margin-top: 10px;
    margin: auto; 
    flex-direction: column;
    padding-top: 10px;
    border-radius: 30px;
    background-color: #172b49;
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
    display: block;
}

#welcome {
    display: flex;
    margin-left: auto;
    margin-right: auto;
    width: 80%;
    height: 100px;
    justify-content: center;
    color: white;
    font-size: 25px;
    text-align: center;
    padding-top: 30px;
}
    
.start-next-btn {
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
    width: 180px;
    height: 50px;
    margin: auto;
    border-radius: 15px;
    cursor: pointer;
    font-size: 20px;
}

#rules-list {
    list-style: none;
    color: #f2d607;
    display: flex;
    margin-left: auto;
    margin-right: auto;
    width: 80%;
    flex-direction: column;
}

#rules-list li {
    margin-bottom: 15px;
}

#rules-area {
    height: 300px;
    font-size: 18px;
    padding-top: 10px;  
}

#start-quiz {
    display: flex;
    margin: 10px auto;
    height: 25px;
    justify-content: center;
    padding-top: 20px;
}

h3 {
    text-align: center;
    color: white;
}

/* Results area styling */
#score h3 {
    margin-top: 20px;
}

#score-area {
    width: 500px;
    height: 600px;
    margin: 50px;
    display: flex;
    margin-top: 10px;
    margin: auto; 
    flex-direction: column;
    padding-top: 10px;
    border-radius: 30px;
    background-color: #172b49;
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
    display: none;
}

#welcome {
    display: flex;
    margin-left: auto;
    margin-right: auto;
    width: 80%;
    height: 100px;
    justify-content: center;
    color: white;
    font-size: 25px;
    text-align: center;
    padding-top: 30px;
}
    
.restart-quiz-btn {
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
    width: 180px;
    height: 50px;
    margin: auto;
    border-radius: 15px;
    cursor: pointer;
    font-size: 20px;
}

#score-div {
    color: #f2d607;
    font-size: 24px;
    text-align: center;
    margin-top: 10px;
    padding-bottom: 90px;
}
#restart-quiz {
    display: flex;
    margin: 10px auto;
    height: 325px;
    justify-content: center;
}

/* footer styling */
footer {
    width: 500px;
    height: 200px;
    margin: 50px;
    display: flex;
    margin-top: 10px;
    margin: auto; 
    flex-direction: column;
    padding-top: 10px; 
}

#footer-wrapper {
    background-color: #172b49;
    width: 400px;
    height: 120px;
    margin: auto;
    color: #f2d607;
    border-radius: 30px;
    text-align: center;
    padding-top: 10px;
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
    font-size: 15px;
}

#footer-links {
    margin: auto;
    font-size: 24px;
    letter-spacing: 5px;
    padding-top: 8px;
    padding-bottom: 26px;
}

#footer-madeof i {
    font-size: 24px;
}

/* Media queries */

/* Larger screens like computer monitors */
@media screen and (max-width: 1200px) {

}
/* Medium screens like laptops and ipad */
@media (min-width:600px) and (max-width: 1200px) {
    
}

/* Smaller screens like smartphones */
@media (min-width: 300px) and (max-width: 500px) {

/* Logo styling */    

#logo-text {
    width: 300px;
    height: 150px;
    margin: 50px;
    display: flex;
    justify-content: center;
    margin: auto;
    flex-direction: row;
} 

.logo-text {
    width: 166px;
    height: 50px;
    margin: auto;
    text-align: center;
    font-size: 16px;
    font-weight: 600;
}

/* Welcome and rules styling */

#welcome-rules-area {
    width: 300px;
    height: 600px;
    margin: 50px;
    display: flex;
    margin-top: 10px;
    margin: auto; 
    flex-direction: column;
    padding-top: 10px;
    border-radius: 30px;
    background-color: #172b49;
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
    display: block;
}

#rules-area {
    height: 300px;
    font-size: 14px;
    padding-top: 20px;
}

h3 {
    text-align: center;
    color: white;
    font-size: 20px;
}

#welcome {
    display: flex;
    margin-left: auto;
    margin-right: auto;
    width: 80%;
    height: 100px;
    justify-content: center;
    color: white;
    font-size: 25px;
    text-align: center;
    padding-top: 30px;
}
/* Results area styling */

#score h3 {
    margin-top: 20px;
}

#score-area {
    width: 300px;
    height: 600px;
    margin: 50px;
    display: flex;
    margin-top: 10px;
    margin: auto; 
    flex-direction: column;
    padding-top: 10px;
    border-radius: 30px;
    background-color: #172b49;
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
    display: none;
}

/* Game area styling */

#quiz-area {
    width: 300px;
    height: 600px;
    margin: 50px;
    display: flex;
    margin-top: 10px;
    margin: auto; 
    flex-direction: column;
    padding-top: 10px;
    border-radius: 30px;
    background-color: #172b49;
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
    display: none;
}

#questions-div {
    display: flex;
    margin-left: auto;
    margin-right: auto;
    width: 80%;
    height: 100px;
    justify-content: center;
    color: white;
    font-size: 20px;
    text-align: center;
    padding-top: 30px;
}

#timer {
    display: flex;
    margin: 10px auto;
    width: 50%;
    height: 25px;
    justify-content: center;
    color: #172b49;
    background-color: #f2d607;
    border-radius: 15px;
    padding-top: 10px;
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
    font-weight: bold;
}

/* score area and question counter */
#q-left-answer-correct {
    display: flex;
    flex-direction: row;
}

#questions-left {
    width: 75px;
    height: 50px;
    margin-left: 13px;
    color: white;
    font-size: 16px;
    padding-top: 20px;
    padding-left: 10px;
}

#questions-left-counter {
    width: 7%;
    height: 50px;
    color: #f2d607;
    font-size: 16px;
    padding-left: 7px;
    padding-top: 20px;
}

#questions-left-p {
    height: 50px;
    color: #f2d607;
    font-size: 16px;
    padding-top: 20px;
}

#correct-answers {
    width: 70px;
    height: 50px;
    margin-left: 20px;
    color: white;
    font-size: 16px;
    padding-top: 20px;
    text-align: center;
    padding-right: 4px;
}

#correct-answers-counter {
    width: 10%;
    height: 50px;
    color: #f2d607;
    font-size: 16px;
    padding-top: 20px;
    text-align: center;
}

/* footer styling */
footer {
    width: 300px;
    height: 200px;
    margin: 50px;
    display: flex;
    margin-top: 10px;
    margin: auto; 
    flex-direction: column;
    padding-top: 10px; 
}

#footer-wrapper {
    background-color: #172b49;
    width: 300px;
    height: 120px;
    margin: auto;
    color: #f2d607;
    border-radius: 30px;
    text-align: center;
    padding-top: 10px;
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
    font-size: 14px;
}

#footer-links {
    margin: auto;
    font-size: 24px;
    letter-spacing: 5px;
    padding-top: 8px;
    padding-bottom: 26px;
}

#footer-madeof i {
    font-size: 24px;
}

#footer-madeof p {
    font-size: 12px;
}
}

